<resources>
    <string name="app_name">Kontak App</string>
    <string name="action_settings">Settings</string>
    <string name="contact_thumb">Contact Thubmnail Picture</string>
    <string name="action_clear">Clear</string>
    <string name="new_contact">New Contact</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="contact_not_valid">Please enter valid contact information</string>
    <string name="action_generate">Generate</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="action_sort_first">Sort by First Name</string>
    <string name="action_sort_last">Sort by Last Name</string>
</resources>
